--- a/Lab 2/index.html
+++ b/Lab 2/index.html
@@ -6,11 +6,42 @@
   </head>
   <body>
     <header>
-      
+      Ryan Roberts, UAB student
+      <nav>
+      </nav>
     </header>
     <h1>About Me</h1>
-    <p>Hello, My name is Ryan Roberts a student of the CSS 221 class. This portfolio contains different things about me such as my hobbies and upcoming projects</p>
+    <p>Hello, My name is Ryan Roberts a student of the CSS 221 class at UAB for the Fall 2023 semester. <br>
+      This portfolio will contain different things about me such as my hobbies and upcoming projects.
+    </p>
 
+    <section>
+      <h2>My Hobbies</h2>
+      <ul>          
+        <li>Playing Guitar</li>
+        <li>Riding my longboard</li>
+        <li>Playing videogames</li>
+        <li>and Photography</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>My Current Skills in HTML, Javascript, and CSS</h2>
+      <p>As of right now it is only a basic understanding of some core principles of HTML, but this <br>
+        will probably change as the semester continues.
+      </p>
+    </section>
+
+    <section>
+      <h2>Project Showcase</h2>
+      <p>Also nothing to show here currently, but this stands to be updated.</p>
+    </section>
+
+    <section>
+      <h3>How to contact me?</h3>
+      <p>I can be reached at my student email: ryandale@uab.edu</p>
+    </section>
+    
 
     <nav>
     </nav>
@@ -20,5 +51,8 @@
 
     </main>
   </body>
+  <footer>
+    <p>Footer content to be added</p>
+  </footer>
 
 </html>
