modified:   Homework/ryandale.hw3.html

--- a/Homework/ryandale.hw3.html
+++ b/Homework/ryandale.hw3.html
@@ -9,16 +9,25 @@
       Ryan Roberts, UAB student
     </header>
 
-    <nav>
-    </nav>
+    <h1>Introducing the fieldset</h1>
+    <fieldset>
+      <legend>What is your favorite game?</legend>
+      <label for="game">Favorite Game:</label>
+      <input type="text" id="game" name="game">
+      <br>
+      <label for="reason">Why is this your favorite game?</label>
+      <textarea id="reason" name="reason" rows="1" cols="33">
 
-    <main>
+      </textarea>
+      <br>
+      <br>
+      <input type="submit" value="Submit">
+    </fieldset>
 
 
-    </main>
   </body>
   <footer>
-    <p>Footer content to be added</p>
+    <p></p>
   </footer>
 
 </html>
