--- a/Homework/HW2/index.html
+++ b/Homework/HW2/index.html
@@ -7,12 +7,30 @@
   <body>
     <h1>JavaJam Coffee Bar</h1>
 
-    <a href="index.html">Home</a>&nbsp;&nbsp;
-    <a href="menu.html">Menu</a>&nbsp;&nbsp;
-    <a href="music.html">Music</a>&nbsp;&nbsp;
-    <a href="jobs.html">Jobs</a>
+    <a href="index.html"><strong>Home</strong></a>&nbsp;&nbsp;
+    <a href="menu.html"><strong>Menu</strong></a>&nbsp;&nbsp;
+    <a href="music.html"><strong>Music</strong></a>&nbsp;&nbsp;
+    <a href="jobs.html"><strong>Jobs</strong></a>
 
-    
+    <main>
+        <h2>Relax at JavaJam</h2>
+        <p>Friendly and eclectic — JavaJam Coffee Bar is the perfect place to take a break, 
+            enjoy a refreshing beverage, and have a snack or light meal.</p>
+        <ul>
+            <li>Specialty Coffee and Organic Tea</li>
+            <li>Bagels, Muffins, and Gluten-free Pastries</li>
+            <li>Organic Salads</li>
+            <li>Music and Poetry Readings</li>
+            <li>Open Mic Night</li>   
+        </ul>
+        <div class="contact">
+            <p>12010 Garrett Bay Road<br>
+                Ellison Bay, WI 54210<br>
+                888-555-5555
+            </p>
+        </div>    
+    </main>
+
   </body>
 
   <footer>
