--- a/Homework/HW2/jobs.html
+++ b/Homework/HW2/jobs.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>JavaJam Job Application</title>
+    <title>JavaJam Hiring</title>
 
   </head>
   <body>
     <h1>JavaJam Coffee Bar</h1>
 
-    <a href="index.html">Home</a>&nbsp;&nbsp;
-    <a href="menu.html">Menu</a>&nbsp;&nbsp;
-    <a href="music.html">Music</a>&nbsp;&nbsp;
-    <a href="jobs.html">Jobs</a>
+    <a href="index.html"><strong>Home</strong></a>&nbsp;&nbsp;
+    <a href="menu.html"><strong>Menu</strong></a>&nbsp;&nbsp;
+    <a href="music.html"><strong>Music</strong></a>&nbsp;&nbsp;
+    <a href="jobs.html"><strong>Jobs</strong></a>
+
+    <main>
+        <h2>Work at JavaJam</h2>
+        <p>Our currently available positions:</p>
+        <h3>Customer Negotiator</h3>
+        <p>In this day and age people need their coffee and they need it to be perfect. However, sometimes mistakes may happen. In the event that one of the customers turns feral in the event that their order was wrong it will be up to you to settle this issue.<br> 
+            <strong>Skills required:</strong></p>
+        <ul>
+            <li>Great Communication Skills</li>
+            <li>The Ability to Resolve Disputes</li>
+            <li>Tremendous Amounts of Patience</li>
+        </ul>
+        <h3>Almond Milker</h3>
+        <p>A main staple of many people's coffee nowadays includes the excellent milk substitute: almonds. With this position, it will be your job to make sure the almonds we receive are properly milked, treated with care, and disposed of humanely.<br>
+            <strong>Skills Required:</strong></p>
+        <ul>
+            <li>Great Hand-Eye Coordination and Dexterity</li>
+            <li>Preferably No Almond Allergies</li>
+            <li>Respect For All of Nature</li>
+        </ul>
+    </main>
   </body>
 
   <footer>
