--- a/Homework/HW2/menu.html
+++ b/Homework/HW2/menu.html
@@ -7,10 +7,23 @@
   <body>
     <h1>JavaJam Coffee Bar</h1>
 
-    <a href="index.html">Home</a>&nbsp;&nbsp;
-    <a href="menu.html">Menu</a>&nbsp;&nbsp;
-    <a href="music.html">Music</a>&nbsp;&nbsp;
-    <a href="jobs.html">Jobs</a>
+    <a href="index.html"><strong>Home</strong></a>&nbsp;&nbsp;
+    <a href="menu.html"><strong>Menu</strong></a>&nbsp;&nbsp;
+    <a href="music.html"><strong>Music</strong></a>&nbsp;&nbsp;
+    <a href="jobs.html"><strong>Jobs</strong></a>
+
+    <main>
+        <h2>Coffee at JavaJam</h2>
+        <dt><strong>Just Java</strong></dt>
+        <dd>Regular house blend, decaffeinated coffee, or flavor of the day.<br>
+            Endless Cup $3.50</dd>
+        <dt><strong>Cafe au Lait</strong></dt>
+        <dd>House blended coffee infused into a smooth, steamed milk.<br>
+            Single $4.00 Double $5.00</dd>
+        <dt><strong>Iced Cappuccino</strong></dt>
+        <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>
+            Single $5.00 Double $6.50</dd>
+    </main>
   </body>
 
   <footer>
