--- a/Homework/HW2/music.html
+++ b/Homework/HW2/music.html
@@ -7,10 +7,47 @@
   <body>
     <h1>JavaJam Coffee Bar</h1>
 
-    <a href="index.html">Home</a>&nbsp;&nbsp;
-    <a href="menu.html">Menu</a>&nbsp;&nbsp;
-    <a href="music.html">Music</a>&nbsp;&nbsp;
-    <a href="jobs.html">Jobs</a>
+    <a href="index.html"><strong>Home</strong></a>&nbsp;&nbsp;
+    <a href="menu.html"><strong>Menu</strong></a>&nbsp;&nbsp;
+    <a href="music.html"><strong>Music</strong></a>&nbsp;&nbsp;
+    <a href="jobs.html"><strong>Jobs</strong></a>
+
+    <main>
+        <h2>Upcoming Music at JavaJam</h2>
+        <table>
+            <colgroup span="3"></colgroup>           
+            <tr>
+                <th>Name</th>
+                <th>Event Time</th>
+                <th>Event Description</th>
+            </tr>
+            <tr>
+                <td>Frostbit Bell Peppers</td>
+                <td>9/5/23</td>
+                <td>Hit rock band the Frostbit Bell Peppers will be playing live this Tuesday</td>
+            </tr>
+            <tr>
+                <td>25 Minutes to Venus</td>
+                <td>9/8/23</td>
+                <td>Get ready to jam when 25 Minutes to Venus swings by playing their hit song "The Revive"</td>
+            </tr>
+            <tr>
+                <td>Absurd Rogue</td>
+                <td>9/10/23</td>
+                <td>Join the hit duo Absurd Rogue and their accompanying laser light show</td>
+            </tr>
+            <tr>
+                <td>Indifference towards the machine</td>
+                <td>9/15/23</td>
+                <td>This soft rock band will be live with us performing one of their hits "Cows on Stampede"</td>
+            </tr>
+            <tr>
+                <td>The Ladybugs</td>
+                <td>9/17/23</td>
+                <td>A rock group classic, The Ladybugs will be playing their entire album "Abigail Lane"</td>
+            </tr>
+        </table>
+    </main>
   </body>
 
   <footer>
