modified:   Homework/HW2/jobs.html

--- a/Homework/HW2/jobs.html
+++ b/Homework/HW2/jobs.html
@@ -23,6 +23,7 @@
             <li>The Ability to Resolve Disputes</li>
             <li>Tremendous Amounts of Patience</li>
         </ul>
+        <p>Hourly Rate: $12.50</p>
         <h3>Almond Milker</h3>
         <p>A main staple of many people's coffee nowadays includes the excellent milk substitute: almonds. With this position, it will be your job to make sure the almonds we receive are properly milked, treated with care, and disposed of humanely.<br>
             <strong>Skills Required:</strong></p>
@@ -31,6 +32,7 @@
             <li>Preferably No Almond Allergies</li>
             <li>Respect For All of Nature</li>
         </ul>
+        <p>Hourly Rate: $32.25</p>
     </main>
   </body>
 
