Moved some things around

--- a/Lab 5/business_portfolio.html
+++ b/Lab 5/business_portfolio.html
@@ -49,7 +49,7 @@
 
     <section>
       <h3>How to contact me?</h3>
-      <p>I can be reached at my student email: ryandale@uab.edu</p>
+      <p>I can be reached at my student email: ryanr@uab.edu</p>
     </section>
     <!--All of this is some basic text-->
     <footer>
