--- a/Homework/ryandale.hw7.html
+++ b/Homework/ryandale.hw7.html
@@ -1,4 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+    <head>
+        <title>My Interactive Photo Gallery</title>
+        <link rel="stylesheet" href="ryandale.hw7.css">
+    </head>
+    <body>
+        <header>My Interactive Photo Gallery</header>
+        <main>
+            <div class="firstimage"></div>
+            <div class="secondimage"></div>
+            <div class="thirdimage"></div>
+            <div class="fourthimage"></div>
+            <div class="fifthimage"></div>
+            <div class="sixthimage"></div>
+            <div class="seventhimage"></div>
+            <div class="eighthimage"></div>
+            <div class="ninthimage"></div>
+            <div class="tenthimage"></div>
+            <div class="eleventhimage"></div>
+            <div class="twelfthimage"></div>
+        </main>
+    </body>
 </html>
